--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
     
     <body>
         <h1>Odin Recipes</h1>
+        <ul>
+            <li><a href="./recipes/ratatouilleBakedPenne.html">Ratatouille Baked Penne</a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+        </ul>
     </body>
 </html>
