Add image and ingredients and instructions

--- a/recipes/ratatouilleBakedPenne.html
+++ b/recipes/ratatouilleBakedPenne.html
@@ -7,7 +7,34 @@
     <title>Ratatouille Baked Penne - Odin Recipes</title>
 </head>
 <body>
+    <img src="../img/ratatouilleBakedPenne.jpeg">
     <h1>Ratatouille Baked Penne</h1>
     <p>Prep-time: 30 minutes / Ready in: 50 minutes</p>
+    <div>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>8 oz. dried whole grain penne pasta</li>
+            <li>2 medium zucchini and/or yellow summer squash, quartered lengthwise and cut into ½-inch slices</li>
+            <li>2 cups coarsely chopped tomatoes</li>
+            <li>½ cup chopped celery</li>
+            <li>½ cup chopped red onion</li>
+            <li>3 cloves garlic, minced</li>
+            <li>1 15-oz. can no-salt-added tomato sauce</li>
+            <li>3 tablespoons balsamic vinegar</li>
+            <li>2 tablespoons chopped fresh oregano</li>
+            <li>1 tablespoon chopped fresh thyme</li>
+            <li>¾ teaspoon sea salt</li>
+            <li>¼ teaspoon freshly ground black pepper</li>
+            <li>1 15-oz. can no-salt-added red kidney beans, rinsed and drained</li>
+        </ul>
+    </div>
+    <div>
+        <h2>Instructions</h2>
+        <ol>
+            <li>Preheat oven to 375°F. Cook pasta according to package directions; drain.</li>
+            <li>Meanwhile, in an extra-large oven-safe skillet cook squash, tomatoes, celery, onion, and garlic over medium 6 to 7 minutes or until nearly tender, stirring occasionally and adding water, 1 to 2 Tbsp. at a time, as needed to prevent sticking. Stir in the next six ingredients (through pepper). Stir in cooked pasta and beans.</li>
+            <li>Transfer skillet to oven. Bake, covered, 20 minutes. Sprinkle with additional oregano and/or thyme.</li>
+        </ol>
+    </div>
 </body>
 </html>
