--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html lang="eng">
     <head>
         <meta charset="utf-8">
-        <title>Odin recipes</title>
+        <title>Odin Recipes</title>
     </head>
     
     <body>
         <h1>Odin Recipes</h1>
         <ul>
             <li><a href="./recipes/ratatouilleBakedPenne.html">Ratatouille Baked Penne</a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
+            <li><a href="">Spinach-Potato Tacos
+            </a></li>
+            <li><a href="">Mexican Black Bean Corn Soup</a></li>
         </ul>
     </body>
 </html>
