--- a/recipes/mexican-black-bean-corn-soup.html
+++ b/recipes/mexican-black-bean-corn-soup.html
@@ -8,5 +8,24 @@
 </head>
 <body>
     <img src="https://myplate-prod.azureedge.us/sites/default/files/styles/recipe_525_x_350_/public/2020-10/EasyandHeathyBlackBeanSoup527x323.jpg?itok=VgM7Ye98">
+    <div>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>1 large onion, diced</li>
+            <li>3 stalks of celery, diced</li>
+            <li>2 carrots, diced</li>
+            <li>5 cups of vegetable broth (homemade or low sodium)</li>
+            <li>4 15 ounce cans of black beans, low sodium (or 7 cups cooked) undrained</li>
+            <li>1 15 ounce can of whole sweet corn, drained (salt free, unsweetened)</li>
+            <li>1 14.5 ounce can of fire roasted tomatoes, diced (I use Muir Glen Organics)</li>
+            <li>4 teaspoons roasted cumin (or regular cumin)</li>
+            <li>1 to 1 1/2 teaspoon chipotle chili powder</li>
+            <li>1/2 teaspoon Herbamare or salt (to taste)</li>
+            <li>Juice of 1 small lime</li>
+            <li>Fresh ground pepper to taste</li>
+            <li>1/2 bunch of cilantro, chopped to garnish</li>
+        </ul>
+    </div>
+    
 </body>
 </html>
