--- a/recipes/mexican-black-bean-corn-soup.html
+++ b/recipes/mexican-black-bean-corn-soup.html
@@ -26,6 +26,14 @@
             <li>1/2 bunch of cilantro, chopped to garnish</li>
         </ul>
     </div>
-    
+    <div>
+        <h2>Instructions</h2>
+        <ol>
+            <li>In a large pot, sauté the onion, celery, carrots and garlic in 1 cup of vegetable broth over medium heat for 6-7 minutes. Add chipotle chili powder, roasted cumin, and black pepper and cook for another minute or two. Stir in the remaining vegetable broth, 4 cups (or 2.5 cans) of beans, and sweet corn. Turn to high heat and bring to a boil.</li>
+            <li>Add remaining 3 cups (or 1.5 cans) of beans and crushed tomatoes to a Vitamix or blender and process until smooth. Stir into soup when boiling, reduce heat to medium, and simmer for 15 minutes until beans and vegetables are done to your desired tenderness.</li>
+            <li>Taste test. Add Herbamare or salt to taste and lime juice.</li>
+            <li>Serve in bowls and garnish with fresh chopped cilantro.</li>
+        </ol>
+    </div>
 </body>
 </html>
