--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <h1>Odin Recipes</h1>
         <ul>
             <li><a href="./recipes/ratatouilleBakedPenne.html">Ratatouille Baked Penne</a></li>
-            <li><a href="">Spinach-Potato Tacos
+            <li><a href="./recipes/spinach-potato-tacos.html">Spinach-Potato Tacos
             </a></li>
             <li><a href="./recipes/mexican-black-bean-corn-soup.html">Mexican Black Bean Corn Soup</a></li>
         </ul>
