Add Instructions header and OL

--- a/recipes/spinach-potato-tacos.html
+++ b/recipes/spinach-potato-tacos.html
@@ -27,10 +27,12 @@
     <div>
         <h2>Instructions</h2>
         <ol>
-            <li>In a large pot, sauté the onion, celery, carrots and garlic in 1 cup of vegetable broth over medium heat for 6-7 minutes. Add chipotle chili powder, roasted cumin, and black pepper and cook for another minute or two. Stir in the remaining vegetable broth, 4 cups (or 2.5 cans) of beans, and sweet corn. Turn to high heat and bring to a boil.</li>
-            <li>Add remaining 3 cups (or 1.5 cans) of beans and crushed tomatoes to a Vitamix or blender and process until smooth. Stir into soup when boiling, reduce heat to medium, and simmer for 15 minutes until beans and vegetables are done to your desired tenderness.</li>
-            <li>Taste test. Add Herbamare or salt to taste and lime juice.</li>
-            <li>Serve in bowls and garnish with fresh chopped cilantro.</li>
+            <li>Place the potatoes in a medium saucepan and add water to cover. Bring to a boil, then reduce the heat to medium-low and simmer, covered, until the potatoes are tender when pierced with the tip of a sharp knife, 10 to 12 minutes. Drain well and set aside.</li>
+            <li>Meanwhile, lay a clean kitchen towel or several layers of paper towel on the counter and place the thawed spinach at the bottom of one short end. Roll up the spinach in the towel and, holding it over the sink, twist either end of the roll to squeeze out as much liquid from the spinach as you can. Unroll and set aside.</li>
+            <li>In a large skillet, cook the onion and poblano pepper over medium heat, stirring occasionally and adding water 1 to 2 tablespoons at a time as needed to keep the vegetables from sticking, until softened, 7 to 8 minutes. Add the garlic and cumin and cook until fragrant, about 1 minute.</li>
+            <li>Add the reserved spinach and potatoes along with the plant milk and nutritional yeast. Season to taste with salt and pepper and cook until heated through, 2 to 3 minutes. Remove from the heat and set aside.</li>
+            <li>Meanwhile, heat a large nonstick skillet over medium heat. Add as many corn tortillas to the pan as will fit in a single layer and heat for a few minutes to warm the tortillas through. Remove them from the pan and set them aside, covered with a clean kitchen towel to keep warm. Repeat with the remaining tortillas.</li>
+            <li>To serve, place the tortillas on individual serving plates or a large platter and divide the potato mixture among them, spooning it onto the center of each. Sprinkle with cilantro and serve.</li>
         </ol>
     </div>
 </body>
