--- a/recipes/mexican-black-bean-corn-soup.html
+++ b/recipes/mexican-black-bean-corn-soup.html
@@ -7,6 +7,7 @@
     <title>Mexican Black Bean Corn Soup - Odin Recipes</title>
 </head>
 <body>
+    <h1>Mexican Black Bean Corn Soup</h1>
     <img src="https://myplate-prod.azureedge.us/sites/default/files/styles/recipe_525_x_350_/public/2020-10/EasyandHeathyBlackBeanSoup527x323.jpg?itok=VgM7Ye98">
     <div>
         <h2>Ingredients</h2>
