--- a/recipes/mexican-black-bean-corn-soup.html
+++ b/recipes/mexican-black-bean-corn-soup.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h1>Mexican Black Bean Corn Soup</h1>
-    <img src="https://myplate-prod.azureedge.us/sites/default/files/styles/recipe_525_x_350_/public/2020-10/EasyandHeathyBlackBeanSoup527x323.jpg?itok=VgM7Ye98">
+    <img src="https://myplate-prod.azureedge.us/sites/default/files/styles/recipe_525_x_350_/public/2020-10/EasyandHeathyBlackBeanSoup527x323.jpg?itok=VgM7Ye98"
+    width="349"
+    height="144">
     <div>
         <h2>Ingredients</h2>
         <ul>
