Add description h2 with description paragraph

--- a/recipes/mexican-black-bean-corn-soup.html
+++ b/recipes/mexican-black-bean-corn-soup.html
@@ -12,6 +12,10 @@
     width="349"
     height="144">
     <div>
+        <h2>Description</h2>
+        <p>This is one of my favorite soup recipes. I get requests for it all the time. Cooking your own black beans and vegetable broth makes this soup even more delicious.</p>
+    </div>
+    <div>
         <h2>Ingredients</h2>
         <ul>
             <li>1 large onion, diced</li>
