--- a/recipes/spinach-potato-tacos.html
+++ b/recipes/spinach-potato-tacos.html
@@ -12,6 +12,10 @@
     width="349"
     height="144">
     <div>
+        <h2>Description</h2>
+        <p>Traditional Mexican tacos are much more than ground beef and sour cream in a fried shell. There are many, many ways to make tacos—in my opinion, this is one of the best.</p>
+    </div>
+    <div>
         <h2>Ingredients</h2>
         <ul>
             <li>2 large yukon gold potatoes, scrubbed and cut into small dice</li>
