--- a/recipes/ratatouilleBakedPenne.html
+++ b/recipes/ratatouilleBakedPenne.html
@@ -10,6 +10,10 @@
     <h1>Ratatouille Baked Penne</h1>
     <img src="../img/ratatouilleBakedPenne.jpeg">
     <div>
+        <h2>Description</h2>
+        <p>This saucy vegan ratatouille goes from the stove top to the oven in the same pan. If you don’t have an oven-safe skillet, prepare this recipe in an extra-large skillet as directed through Step 2. Transfer the mixture to a 2-qt. square or rectangular baking dish and bake as directed.</p>
+    </div>
+    <div>
         <h2>Ingredients</h2>
         <ul>
             <li>8 oz. dried whole grain penne pasta</li>
